yml/svc/ingress/demo-vh/demo-vh-svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-vh-svc1
spec:
  selector:
    name: demo-vh-dp1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
