yml/svc/ingress/demo-vh/demo-vh-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-vh-svc2
spec:
  selector:
    name: demo-vh-dp2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
