yml/svc/ingress/demo-vh/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-nginx
spec:
  rules:
  - host: myapp1.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-vh-svc1
          servicePort: 80
  - host: myapp2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-vh-svc2
          servicePort: 80
